[package]
name = "gddcjam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
gl = "0.14.0"
glutin = { version = "0.31.1", features = ["glx", "windows-sys"] }
glutin-winit = { version = "0.4.2", features = ["glx"] }
lazy_static = "1.4.0"
raw-window-handle = "0.5.2"
winit = { version = "0.29.3", features = ["rwh_05"], default-features = false }
